force-app/main/default/objects/Account_Usage__c/Account_Usage__c.object-meta.xml
<CustomObject>
    <label>Account Usage</label>
    <nameField>
        <displayFormat>AUN-{0000}</displayFormat>
        <label>Account Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>