force-app/main/default/objects/Account_Usage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>This will hold OCPGUID id for Account usage record. This is coming from Redshift.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Usages</relationshipLabel>
    <relationshipName>Account_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>