force-app/main/default/objects/Account_Usage__c/fields/Account_Usage_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Usage_External_ID__c</fullName>
    <description>This is external id field . Concatenation of customer number and rep month which is coming from Redshift.</description>
    <externalId>true</externalId>
    <label>Account Usage External ID</label>
    <length>110</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>