force-app/main/default/objects/Account_Usage__c/fields/Billable_Activities__c.field-meta.xml
<CustomField>
    <fullName>Billable_Activities__c</fullName>
    <description>This will hold activities count coming redshift. We need this on Account Usage</description>
    <label>Billable Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>