force-app/main/default/objects/Account_Usage__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>This will hold customer sub class value from related account. Using account id we are bringing this value account.</description>
    <formula>TEXT(Account__r.Customer_Sub_Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>