force-app/main/default/objects/Account_Usage__c/fields/Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Revenue__c</fullName>
    <description>This gross revenue value is coming from redshift. We are storing in account usage.</description>
    <label>Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>