force-app/main/default/objects/Account_Usage__c/fields/Month_of_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Reporting__c</fullName>
    <description>This Date value coming from Redshift. We are storing in account usage.</description>
    <label>Month of Reporting</label>
    <type>Date</type>
</CustomField>