force-app/main/default/objects/Account_Usage__c/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <description>This Net revenue value is coming from redshift. We are storing in account usage.</description>
    <label>Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>