force-app/main/default/objects/Account_Usage__c/fields/X_Factor__c.field-meta.xml
<CustomField>
    <fullName>X_Factor__c</fullName>
    <description>X Factor value is coming from Redshift. We are storing in Account Usage.</description>
    <label>X Factor</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>